fix menu collapse

--- a/app/assets/stylesheets/user/_navigation.scss
+++ b/app/assets/stylesheets/user/_navigation.scss
@@ -29,26 +29,40 @@
   }
 
   .main-menu {
-    @include translateX(-50%);
-    margin-top: 3px;
-    margin-bottom: 3px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 100%;
-
-    .ul-wrapper {
-      display: table;
-      margin: 0 auto;
-    }
-
     a {
-      padding-left: 5px;
-      padding-right: 5px;
-    }
+      padding-left: 10px;
+      padding-right: 10px;
 
-    .menu-icon {
-      font-size: 0.9rem;
+      .menu-icon {
+        font-size: 15px;
+      }
+    }
+  }
+}
+
+@media (max-width: 830px) {
+  .navbar-toggle {
+    display: block;
+  }
+
+  .main-menu {
+    &.navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+    &.navbar-collapse.collapse {
+      display: none !important;
+    }
+    .navbar-nav {
+      float: none !important;
+      margin: 7.5px -15px;
+    }
+    .navbar-nav > li {
+      float: none;
+    }
+    .navbar-nav > li > a {
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
   }
 }
